--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,11 @@
-
+torch==2.1.0
+torch-geometric==2.4.0
+transformers==4.35.0
+accelerate==0.24.0
+bitsandbytes==0.41.2
+scipy==1.11.3
+numpy==1.26.0
+networkx==3.1
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.006
