Add GPU support to Docker Compose configuration

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,1 +1,14 @@
+version: '3.8'
 
+services:
+  gra-backend:
+    build: .
+    ports:
+      - "8000:8000"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
